kubernetes/apps/kubero/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kubero
  namespace: kubero
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`kubero.home.mcnees.me`)
      kind: Rule
      middlewares:
        - name: oauth2-proxy
          namespace: auth
      services:
        - name: kubero
          port: 2000
  tls:
    secretName: legacy-home-wildcard-tls
